<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/colorPrimary">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/banner1"
               android:textSize="20dp"
               android:id="@+id/banner1"/>

       <RelativeLayout
           android:layout_alignParentRight="true"
           android:layout_toRightOf="@id/banner1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <ImageView
               android:layout_alignParentRight="true"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/kkk"
               android:id="@+id/img"/>
           <TextView
               android:layout_alignParentRight="true"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/numbers"
               android:text="0"
               android:textSize="20dp"
               android:textColor="#FFF"/>
       </RelativeLayout>
   </RelativeLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/welcome"
               android:textSize="20dp"/>
       </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">
       <ListView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/listviews"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tocal1"
            android:textSize="20dp"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:paddingRight="15dp"
            android:textSize="20dp"
            android:id="@+id/price"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="$"
            android:paddingRight="5dp"
            android:id="@+id/dola"
            android:textSize="20dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Order"
            android:textSize="25dp"
            android:id="@+id/oder"
            android:textAlignment="center"/>
    </LinearLayout>
</LinearLayout>